# kairos

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
include/kairos/: clap_kairos_patch_bus.h  clap_kairos_tap_bus.h  control_thread.hpp  event_scheduler.hpp  graph.hpp  input_event.hpp  ipc.hpp  ipc_channel.hpp  param_event.hpp  plugin_graph_manager.hpp  plugin_host.hpp  plugin_instance.hpp  rcu.hpp  result.hpp  rt_control_thread.hpp  scheduled_event.hpp  session.hpp  spsc_queue.hpp  time_identity.hpp
scripts/: pre-commit
src/: audio_device.cpp  audio_device.hpp  audio_engine.cpp  audio_engine.hpp  builtin_plugins.cpp  builtin_plugins.hpp  control_thread.cpp  event_collector.cpp  event_collector.hpp  input_event_buffer.cpp  input_event_buffer.hpp  ipc_channel.cpp  link_peer.cpp  link_peer.hpp  main.cpp  midi_io.cpp  midi_io.hpp  midi_out_event.hpp  osc_server.cpp  osc_server.hpp  plugin_discovery.cpp  plugin_discovery.hpp  plugin_graph_manager.cpp  plugin_host.cpp  plugin_instance.cpp  process_thread.cpp  process_thread.hpp  rt_control_thread.cpp  session.cpp  version.cpp  wasm_bridge_plugin.cpp
tests/: CMakeLists.txt  test_builtin_plugins.cpp  test_ipc.cpp  test_ipc_channel.cpp  test_patch_bus_host.cpp  test_plugin_graph.cpp  test_plugin_instance.cpp  test_session.cpp  test_spsc_queue.cpp  test_tap_bus_host.cpp  test_time_identity.cpp
tests/stub_patch_bus_plugin/: CMakeLists.txt  stub_patch_bus_plugin.cpp
tests/stub_plugin/: CMakeLists.txt  stub_plugin.cpp
tests/stub_tap_bus_plugin/: CMakeLists.txt  stub_tap_bus_plugin.cpp
